# dora

./: README.md  app.py  db_config.py  pyproject.toml  req.txt  requirements.txt
classes/: data_loader.py
components/: README.md  dag_table.py  dmc_sidebar.py  get_dataframes.py  get_figure.py
data/: applications.json  change_fail.json  change_lead_time.json  deployment_frequency.json  incidents.json
pages/: README.md  applications.py  deployments.py  failure.py  home.py  incidents.py  lead_time.py
