[project]
name = "doraview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.9.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "dash==4.1.0",
    "dash-ag-grid==35.2.0",
    "dash-mantine-components==2.6.1",
    "flask==3.1.3",
    "idna==3.11",
    "importlib-metadata==9.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "narwhals==2.19.0",
    "nest-asyncio==1.6.0",
    "numpy==2.4.4",
    "packaging==26.1",
    "pandas==3.0.2",
    "patsy==1.0.2",
    "plotly==6.7.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.33.1",
    "retrying==1.4.2",
    "scipy==1.17.1",
    "six==1.17.0",
    "statsmodels==0.14.6",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "werkzeug==3.1.8",
    "zipp==3.23.1",
]