[project]
name = "doraview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs==20.3.0",
    "awscrt==0.31.1",
    "Babel==2.9.1",
    "boto3==1.42.91",
	"botocore==1.42.91",
    "blinker==1.9.0",
    "cffi==1.14.5",
    "chardet==4.0.0",
    "chevron==0.13.1",
    "click==8.1.8",
    "colorama==0.4.4",
    "configobj==5.0.6",
    "cryptography==36.0.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "dash==4.1.0",
    "dbus-python==1.2.18",
    "distro==1.5.0",
    "docutils==0.16",
    "dash==4.1.0",
    "dash-ag-grid==35.2.0",
    "dash-mantine-components==2.6.1",
    "flask==3.1.3",
    "gunicorn==23.0.0",
    "idna==3.11",
    "importlib-metadata==9.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jmespath==0.10.0",
    "jsonpatch==1.21",
    "jsonpointer==2.0",
    "jsonschema==3.2.0",
    "lockfile==0.12.2",
    "markupsafe==3.0.3",
    "narwhals==2.19.0",
    "nest-asyncio==1.6.0",
    "netifaces==0.10.6",
    "numpy==2.4.4",
    "oauthlib==3.0.2",
    "pandas==3.0.2",
    "patsy==1.0.2",
    "plotly==6.7.0",
    "ply==3.11",
    "prettytable==0.7.2",
    "prompt-toolkit==3.0.24",
    "pycparser==2.20",
    "PyMySQL==1.1.2",
    "pyrsistent==0.17.3",
    "pyserial==3.4",
    "PySocks==1.7.1",
    "python-daemon==2.3.0",
    "python-dateutil==2.8.2",
    "pytz==2022.7.1",
    "PyYAML==5.4.1",
    "requests==2.33.1",
    "retrying==1.4.2",
    "ruamel.yaml==0.16.6",
    "ruamel.yaml.clib==0.1.2",
    "s3transfer==0.16.0",
    "six==1.17.0",
    "support-info==1.0",
    "systemd-python==235",
    "scipy==1.17.1",
    "six==1.17.0",
    "statsmodels==0.14.6",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "wcwidth==0.2.5",
    "werkzeug==3.1.8",
    "zipp==3.23.1",
]










